1. New Module: check_tls_security.py
  Located at /cqlsh/cqlshlib/axonOpsWorkbench/check_tls_security.py, this module:
  - Connects to the Cassandra endpoint and retrieves TLS/SSL information
  - Analyzes certificates for security issues
  - Checks TLS versions and cipher suites
  - Generates detailed warnings with severity levels and recommendations
  - Writes results to a temporary JSON file

  2. Security Checks Implemented

  - Certificate checks: Expiry, validity dates, self-signed, key sizes, signature algorithms
  - TLS/SSL checks: Deprecated protocols (TLS 1.0/1.1, SSLv2/v3), weak ciphers, Perfect Forward Secrecy
  - Connection checks: SSL errors and connectivity issues

  3. Integration

  - Added import in main.py
  - Added command parsing in cqlshmain.py for the pattern check tls_security (id)

  4. Usage

  The command follows the existing pattern:
  check tls_security (unique_id)

  This will:
  1. Run in a background thread
  2. Connect to the current Cassandra cluster
  3. Analyze TLS/SSL security
  4. Write results to /tmp/{unique_id}.tlscheck

  5. Output Format

  The JSON output includes:
  - Connection details (host, port, TLS version, cipher suite)
  - Certificate information (subject, issuer, validity, key details)
  - Security warnings with severity levels (CRITICAL, HIGH, MEDIUM, LOW)
  - Summary with overall security status

  The implementation is fully native Python, uses only existing dependencies, and works cross-platform on Windows, macOS, and Linux

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@
 **/*.spec
 */*.pyc
 **/__pycache__
+
+# Claude AI and Claude configuration files
+.claude*
+claude.json
+claude.config*
+CLAUDE.md
+.clauderc
+*.claude
+claude-*
+.claude/
